* Adds functionality, Optimizes modules for better use, cleans up code
* Adding Profile module
* Add Users module and removes it from the admin controler
* Adds function to add user
* Adds templates module for some sort of templating
* Removes Views directory from all modules except for the templates module
* Cleans up some code, adds some more comments, and anything I did not add here

--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine on
 RewriteBase /
 
 RewriteCond $1 !^(index\.php|robots\.txt|assets|style)
-RewriteRule ^(.*)$ /CI_HMVC_LoReg/index.php?/$1 [L]
+RewriteRule ^(.*)$ /LoReg/index.php?/$1 [L]
 
     # Disable rewrite for valid directory/files
     RewriteCond %{REQUEST_FILENAME} !-f
